# ai-video-generation-poc-with-temporal

./: .dockerignore  .env.template  Dockerfile  README.md  compose.yml  main.py  makefile  pyproject.toml
apis/fastapi/routes/: auth.py  dtos.py  video.py
core/generations/: dtos.py  service.py
core/temporal/: types.py  worker.py
core/temporal/activities/: falai.py  storage.py  tokens.py
core/temporal/workflows/: video_generation.py
core/tokens/: dtos.py  service.py
core/users/: auth.py  dtos.py  service.py
dbs/inmemory/: engine.py
dbs/inmemory/generations/: dao.py  dbes.py  interfaces.py
dbs/inmemory/tokens/: dao.py  dbes.py  interfaces.py
dbs/inmemory/users/: dao.py  dbes.py  interfaces.py
middlewares/: jwt_bearer.py
migrations/: env.py
migrations/versions/: 0ef757c71b03_initial_migrations.py
services/dependencies/: __init__.py  auth.py  temporal.py
tests/manual/: create_account.py  run_generations.py
utils/: env_utils.py
