[project]
name = "video-generation-poc-with-temporal"
version = "0.1.0"
description = "Proof of concept for orchestrating an AI video generation pipeline (AI Provider → S3 → token deduction → DB) using Temporal workflows and activities with FastAPI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
