[project]
name = "ai-video-generation-poc-with-temporal"
version = "0.1.0"
description = "Proof of concept for orchestrating an AI video generation pipeline (video generation → S3 → token deduction → DB) using Temporal workflows and activities with FastAPI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fal-client>=0.13.1",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.48",
    "temporalio>=1.23.0",
    "uvicorn>=0.42.0",
]
